--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,14 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/logo_image"
-        android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
 
-        android:background=""
+        android:background="@drawable/edit_background"
         android:hint="Email"
-        android:inputType="textEmailAddress"/>
+        android:inputType="textEmailAddress"
+        android:paddingStart="15dp"
+
+        />
 
     <EditText
         android:id="@+id/password_edit"
@@ -37,9 +39,10 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
 
-        android:background=""
+        android:background="@drawable/edit_background"
         android:hint="password"
-        android:inputType="textEmailAddress"
+        android:inputType="numberPassword"
+        android:paddingStart="15dp"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -49,10 +52,10 @@
         android:layout_below="@id/password_edit"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background=""
+        android:background="@drawable/btn_background"
         android:text="로그인"
         android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signUp_btn"
@@ -61,10 +64,10 @@
         android:layout_below="@id/login_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background=""
+        android:background="@drawable/btn_background"
         android:text="회원가입"
         android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
 
 </RelativeLayout>
